--- a/faiktribunu/Base.lproj/Main.storyboard
+++ b/faiktribunu/Base.lproj/Main.storyboard
@@ -12,65 +12,40 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="faiktribunu" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController storyboardIdentifier="Main" id="BYZ-38-t0r" customClass="ViewController" customModule="faiktribunu" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="MainView" id="8bC-Xf-vdC" customClass="MainView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6Tm-13-y4H">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="10" id="dJF-9w-hch">
-                                    <size key="itemSize" width="349" height="250"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="15" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="RcR-UL-Mdy" customClass="CollectionViewCell" customModule="faiktribunu" customModuleProvider="target">
-                                        <rect key="frame" x="13" y="15" width="349" height="250"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="349" height="250"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wBr-gD-Kj8">
-                                                    <rect key="frame" x="0.0" y="0.0" width="349" height="166"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ggq-h3-IE6">
-                                                    <rect key="frame" x="13" y="190" width="48" height="48"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AEt-DV-j9c">
-                                                    <rect key="frame" x="73" y="190" width="256" height="48"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </view>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <size key="customSize" width="349" height="250"/>
-                                        <connections>
-                                            <outlet property="baslik" destination="AEt-DV-j9c" id="GpO-P0-vRs"/>
-                                            <outlet property="haberGorseli" destination="wBr-gD-Kj8" id="0Vt-dx-6ic"/>
-                                            <outlet property="yazarAvatar" destination="ggq-h3-IE6" id="QjG-7W-gs2"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="gs1-nl-5Ks"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="wWo-h7-vMv"/>
-                                </connections>
-                            </collectionView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o9i-YN-fwH" customClass="ScrollableSegmentedControl" customModule="ScrollableSegmentedControl">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="39"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="J6S-GR-X3B"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lSB-yf-yPa">
+                                <rect key="frame" x="0.0" y="40" width="375" height="563"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="o9i-YN-fwH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5Cq-bB-qkc"/>
+                            <constraint firstItem="lSB-yf-yPa" firstAttribute="top" secondItem="o9i-YN-fwH" secondAttribute="bottom" constant="1" id="DiV-js-EaS"/>
+                            <constraint firstItem="lSB-yf-yPa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Gc3-wi-SD7"/>
+                            <constraint firstItem="lSB-yf-yPa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="IAH-Ow-bIb"/>
+                            <constraint firstItem="o9i-YN-fwH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Is7-ag-tWx"/>
+                            <constraint firstItem="lSB-yf-yPa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="P9f-9v-XxE"/>
+                            <constraint firstItem="o9i-YN-fwH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ql3-h2-pUL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="1cU-fA-PSO"/>
+                    <connections>
+                        <outlet property="mViewMain" destination="lSB-yf-yPa" id="0xP-7s-tVl"/>
+                        <outlet property="segmentedControl" destination="o9i-YN-fwH" id="27S-o0-QZ0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -84,6 +59,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="8nb-gD-dEZ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
