--- a/faiktribunu/DetayViewController.xib
+++ b/faiktribunu/DetayViewController.xib
@@ -5,53 +5,36 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetayViewController" customModule="faiktribunu" customModuleProvider="target">
             <connections>
-                <outlet property="detayBaslik" destination="zC0-Sk-PKu" id="bAQ-eh-zMT"/>
-                <outlet property="detayGorsel" destination="tBp-lc-KDZ" id="Wwh-8g-lDl"/>
                 <outlet property="detayIcerik" destination="jZ0-zy-7IR" id="aiZ-tU-ypy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tBp-lc-KDZ">
-                    <rect key="frame" x="0.0" y="20" width="375" height="200"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="200" id="DOo-tb-eN1"/>
-                    </constraints>
-                </imageView>
-                <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jZ0-zy-7IR">
-                    <rect key="frame" x="10" y="295" width="355" height="372"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <wkWebView contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZ0-zy-7IR">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <wkWebViewConfiguration key="configuration">
                         <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                         <wkPreferences key="preferences"/>
                     </wkWebViewConfiguration>
                 </wkWebView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zC0-Sk-PKu">
-                    <rect key="frame" x="10" y="235" width="355" height="48"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="tBp-lc-KDZ" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="RxI-MQ-RVP"/>
-                <constraint firstItem="tBp-lc-KDZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Vpc-jt-qs6"/>
-                <constraint firstItem="tBp-lc-KDZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="ojT-DL-cW8"/>
+                <constraint firstAttribute="trailing" secondItem="jZ0-zy-7IR" secondAttribute="trailing" id="9pA-Ak-XmS"/>
+                <constraint firstAttribute="bottom" secondItem="jZ0-zy-7IR" secondAttribute="bottom" id="RV4-fk-xM1"/>
+                <constraint firstItem="jZ0-zy-7IR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="emc-TW-HDd"/>
+                <constraint firstItem="jZ0-zy-7IR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fZK-Mz-5hq"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="33.5" y="102.5"/>
         </view>
     </objects>
