--- a/faiktribunu/Segment Tabs/Gundem/GundemCollectionViewCell.xib
+++ b/faiktribunu/Segment Tabs/Gundem/GundemCollectionViewCell.xib
@@ -12,27 +12,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gTV-IL-0wX" customClass="GundemCollectionViewCell" customModule="faiktribunu" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="349" height="250"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <rect key="frame" x="0.0" y="0.0" width="275" height="200"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="349" height="250"/>
+                <rect key="frame" x="0.0" y="0.0" width="275" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NxC-1b-jNf">
-                        <rect key="frame" x="0.0" y="0.0" width="349" height="166"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NxC-1b-jNf">
+                        <rect key="frame" x="0.0" y="0.0" width="275" height="130"/>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQB-EB-dVb">
+                        <rect key="frame" x="12" y="140" width="48" height="48"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="166" id="f31-Xx-7WY"/>
+                            <constraint firstAttribute="height" constant="48" id="cw5-qQ-NkP"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="jkA-Wj-twR"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="48" id="obE-fr-XjM"/>
+                            <constraint firstAttribute="width" constant="48" id="xxT-yv-dAw"/>
                         </constraints>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OQB-EB-dVb">
-                        <rect key="frame" x="12" y="185" width="48" height="48"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="48" id="0PE-Sa-raX"/>
-                            <constraint firstAttribute="height" constant="48" id="Bho-VX-d9P"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbp-tW-ffQ">
-                        <rect key="frame" x="72" y="185" width="264" height="48"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbp-tW-ffQ">
+                        <rect key="frame" x="73" y="140" width="190" height="48"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -41,21 +40,23 @@
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="NxC-1b-jNf" secondAttribute="trailing" id="49L-N7-yES"/>
-                <constraint firstAttribute="bottom" secondItem="jbp-tW-ffQ" secondAttribute="bottom" constant="17" id="5L3-Pk-IyP"/>
-                <constraint firstAttribute="trailing" secondItem="jbp-tW-ffQ" secondAttribute="trailing" constant="13" id="6KJ-Mv-lAA"/>
-                <constraint firstItem="OQB-EB-dVb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="8TK-QH-c8u"/>
-                <constraint firstItem="jbp-tW-ffQ" firstAttribute="leading" secondItem="OQB-EB-dVb" secondAttribute="trailing" constant="12" id="8Wb-tM-wjG"/>
-                <constraint firstItem="jbp-tW-ffQ" firstAttribute="leading" secondItem="OQB-EB-dVb" secondAttribute="trailing" constant="12" id="BS9-a9-TEa"/>
-                <constraint firstItem="NxC-1b-jNf" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="P5Q-l0-Dkc"/>
-                <constraint firstAttribute="bottom" secondItem="jbp-tW-ffQ" secondAttribute="bottom" constant="17" id="R6e-KN-R8p"/>
-                <constraint firstItem="NxC-1b-jNf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RDb-gn-PYI"/>
-                <constraint firstItem="OQB-EB-dVb" firstAttribute="top" secondItem="NxC-1b-jNf" secondAttribute="bottom" constant="19" id="efC-wq-zTj"/>
-                <constraint firstItem="jbp-tW-ffQ" firstAttribute="bottom" secondItem="OQB-EB-dVb" secondAttribute="bottom" id="f2g-eX-jnh"/>
-                <constraint firstItem="jbp-tW-ffQ" firstAttribute="top" secondItem="OQB-EB-dVb" secondAttribute="top" id="h6X-cD-wLS"/>
-                <constraint firstItem="jbp-tW-ffQ" firstAttribute="leading" secondItem="OQB-EB-dVb" secondAttribute="trailing" constant="12" id="i2b-x6-UEy"/>
-                <constraint firstItem="jbp-tW-ffQ" firstAttribute="top" secondItem="NxC-1b-jNf" secondAttribute="bottom" constant="19" id="rtI-5I-jSP"/>
-                <constraint firstAttribute="bottom" secondItem="OQB-EB-dVb" secondAttribute="bottom" constant="17" id="vFx-md-Y0B"/>
+                <constraint firstItem="OQB-EB-dVb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="8bq-5W-ecn"/>
+                <constraint firstItem="OQB-EB-dVb" firstAttribute="top" secondItem="NxC-1b-jNf" secondAttribute="bottom" constant="10" id="Bwe-nP-ds1"/>
+                <constraint firstItem="OQB-EB-dVb" firstAttribute="bottom" secondItem="jbp-tW-ffQ" secondAttribute="bottom" id="Feh-y1-qs9"/>
+                <constraint firstItem="jbp-tW-ffQ" firstAttribute="top" secondItem="NxC-1b-jNf" secondAttribute="bottom" constant="10" id="GZi-bc-yCm"/>
+                <constraint firstItem="NxC-1b-jNf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Mo0-gm-E6N"/>
+                <constraint firstItem="jbp-tW-ffQ" firstAttribute="leading" secondItem="OQB-EB-dVb" secondAttribute="trailing" constant="13" id="TFS-dz-GiJ"/>
+                <constraint firstAttribute="trailing" secondItem="NxC-1b-jNf" secondAttribute="trailing" id="TVQ-bG-ref"/>
+                <constraint firstItem="OQB-EB-dVb" firstAttribute="top" secondItem="NxC-1b-jNf" secondAttribute="bottom" constant="10" id="YQC-xp-JVo"/>
+                <constraint firstItem="NxC-1b-jNf" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="anA-1o-nU6"/>
+                <constraint firstItem="OQB-EB-dVb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="bKr-vg-UIr"/>
+                <constraint firstAttribute="trailing" secondItem="jbp-tW-ffQ" secondAttribute="trailing" constant="12" id="by1-u5-94r"/>
+                <constraint firstItem="jbp-tW-ffQ" firstAttribute="leading" secondItem="OQB-EB-dVb" secondAttribute="trailing" constant="13" id="jfi-6X-jjZ"/>
+                <constraint firstItem="OQB-EB-dVb" firstAttribute="top" secondItem="jbp-tW-ffQ" secondAttribute="top" id="mYv-xA-rJB"/>
+                <constraint firstAttribute="bottom" secondItem="jbp-tW-ffQ" secondAttribute="bottom" constant="12" id="pDG-re-qKp"/>
+                <constraint firstAttribute="bottom" secondItem="OQB-EB-dVb" secondAttribute="bottom" constant="12" id="pbw-Td-nhw"/>
+                <constraint firstItem="jbp-tW-ffQ" firstAttribute="leading" secondItem="OQB-EB-dVb" secondAttribute="trailing" constant="13" id="ugH-Jb-e9n"/>
+                <constraint firstAttribute="bottom" secondItem="OQB-EB-dVb" secondAttribute="bottom" constant="12" id="zAn-8Q-Sxd"/>
             </constraints>
             <connections>
                 <outlet property="baslik" destination="jbp-tW-ffQ" id="mM1-db-z4b"/>
