--- a/faiktribunu/Segment Tabs/Videolar/VideolarCollectionViewCell.xib
+++ b/faiktribunu/Segment Tabs/Videolar/VideolarCollectionViewCell.xib
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14270.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="VideolarCollectionViewCell" id="gTV-IL-0wX" customClass="VideolarCollectionViewCell" customModule="faiktribunu" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="349" height="250"/>
+            <rect key="frame" x="0.0" y="0.0" width="275" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="349" height="250"/>
+                <rect key="frame" x="0.0" y="0.0" width="275" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3q-Cb-qt5">
-                        <rect key="frame" x="72" y="185" width="264" height="48"/>
+                        <rect key="frame" x="72" y="135" width="190" height="48"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YD-mE-uEt">
-                        <rect key="frame" x="11" y="185" width="48" height="48"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YD-mE-uEt">
+                        <rect key="frame" x="11" y="135" width="48" height="48"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="48" id="j2F-KM-6PN"/>
                             <constraint firstAttribute="width" constant="48" id="lby-xU-jKW"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w44-DN-YLi">
-                        <rect key="frame" x="0.0" y="0.0" width="349" height="166"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="166" id="MgZ-pN-jE0"/>
-                        </constraints>
+                        <rect key="frame" x="0.0" y="0.0" width="275" height="116"/>
                     </imageView>
                 </subviews>
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="w44-DN-YLi" secondAttribute="trailing" id="7GG-bW-CaS"/>
-                <constraint firstItem="w44-DN-YLi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="HO4-S8-f4E"/>
+                <constraint firstItem="w44-DN-YLi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="LlV-9f-nCR"/>
+                <constraint firstAttribute="trailing" secondItem="w44-DN-YLi" secondAttribute="trailing" id="NQy-ub-oPM"/>
                 <constraint firstItem="Q3q-Cb-qt5" firstAttribute="top" secondItem="7YD-mE-uEt" secondAttribute="top" id="UfQ-0U-EDY"/>
+                <constraint firstItem="w44-DN-YLi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="WTi-uN-N8K"/>
                 <constraint firstItem="Q3q-Cb-qt5" firstAttribute="leading" secondItem="7YD-mE-uEt" secondAttribute="trailing" constant="13" id="YzG-Dt-9IJ"/>
                 <constraint firstItem="Q3q-Cb-qt5" firstAttribute="bottom" secondItem="7YD-mE-uEt" secondAttribute="bottom" id="Z92-n2-txc"/>
                 <constraint firstAttribute="bottom" secondItem="7YD-mE-uEt" secondAttribute="bottom" constant="17" id="fys-nF-ggC"/>
-                <constraint firstItem="7YD-mE-uEt" firstAttribute="top" secondItem="w44-DN-YLi" secondAttribute="bottom" constant="19" id="ofX-OV-Etc"/>
+                <constraint firstItem="Q3q-Cb-qt5" firstAttribute="top" secondItem="w44-DN-YLi" secondAttribute="bottom" constant="19" id="r2m-fw-2b5"/>
                 <constraint firstItem="7YD-mE-uEt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="11" id="sAG-ib-ImA"/>
                 <constraint firstAttribute="trailing" secondItem="Q3q-Cb-qt5" secondAttribute="trailing" constant="13" id="swm-vC-mig"/>
             </constraints>
