--- a/faiktribunu/Segment Tabs/Yazilar/YazilarCollectionViewCell.xib
+++ b/faiktribunu/Segment Tabs/Yazilar/YazilarCollectionViewCell.xib
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14270.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="YazilarCollectionViewCell" id="gTV-IL-0wX" customClass="YazilarCollectionViewCell" customModule="faiktribunu" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="349" height="250"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <rect key="frame" x="0.0" y="0.0" width="275" height="200"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="349" height="250"/>
+                <rect key="frame" x="0.0" y="0.0" width="275" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D4o-dE-2eB">
-                        <rect key="frame" x="0.0" y="0.0" width="349" height="166"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="166" id="zxu-c2-VCf"/>
-                        </constraints>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4o-dE-2eB">
+                        <rect key="frame" x="0.0" y="0.0" width="275" height="130"/>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HNM-Hs-rrz">
-                        <rect key="frame" x="11" y="185" width="48" height="48"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNM-Hs-rrz">
+                        <rect key="frame" x="12" y="140" width="48" height="48"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="48" id="T4P-Ov-o9Y"/>
+                            <constraint firstAttribute="height" constant="48" id="28l-DQ-2TY"/>
                             <constraint firstAttribute="width" constant="48" id="UyI-71-wXc"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJ8-WN-tTV">
-                        <rect key="frame" x="72" y="185" width="264" height="48"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJ8-WN-tTV">
+                        <rect key="frame" x="73" y="140" width="190" height="48"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -40,16 +38,16 @@
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="FJ8-WN-tTV" secondAttribute="trailing" constant="13" id="5RJ-jw-gN0"/>
+                <constraint firstAttribute="trailing" secondItem="FJ8-WN-tTV" secondAttribute="trailing" constant="12" id="5RJ-jw-gN0"/>
                 <constraint firstItem="D4o-dE-2eB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="7Zs-GY-Kyn"/>
-                <constraint firstAttribute="bottom" secondItem="HNM-Hs-rrz" secondAttribute="bottom" constant="17" id="CKg-DG-9AQ"/>
-                <constraint firstItem="HNM-Hs-rrz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="11" id="CNd-Qv-yGl"/>
-                <constraint firstItem="D4o-dE-2eB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ErI-o5-h2w"/>
-                <constraint firstAttribute="bottom" secondItem="FJ8-WN-tTV" secondAttribute="bottom" constant="17" id="Foh-ra-K9I"/>
-                <constraint firstItem="HNM-Hs-rrz" firstAttribute="top" secondItem="D4o-dE-2eB" secondAttribute="bottom" constant="19" id="JSa-qc-LlD"/>
+                <constraint firstItem="HNM-Hs-rrz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="CNd-Qv-yGl"/>
+                <constraint firstAttribute="bottom" secondItem="FJ8-WN-tTV" secondAttribute="bottom" constant="12" id="Foh-ra-K9I"/>
+                <constraint firstItem="D4o-dE-2eB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="HTs-ip-0Yf"/>
+                <constraint firstItem="HNM-Hs-rrz" firstAttribute="top" secondItem="D4o-dE-2eB" secondAttribute="bottom" constant="10" id="Jx8-2h-isf"/>
                 <constraint firstAttribute="trailing" secondItem="D4o-dE-2eB" secondAttribute="trailing" id="MwV-gE-Hy4"/>
-                <constraint firstItem="FJ8-WN-tTV" firstAttribute="top" secondItem="D4o-dE-2eB" secondAttribute="bottom" constant="19" id="ZLy-kc-cEI"/>
+                <constraint firstItem="FJ8-WN-tTV" firstAttribute="top" secondItem="D4o-dE-2eB" secondAttribute="bottom" constant="10" id="ZLy-kc-cEI"/>
                 <constraint firstItem="FJ8-WN-tTV" firstAttribute="leading" secondItem="HNM-Hs-rrz" secondAttribute="trailing" constant="13" id="dR8-fe-aCT"/>
+                <constraint firstItem="HNM-Hs-rrz" firstAttribute="bottom" secondItem="FJ8-WN-tTV" secondAttribute="bottom" id="fbO-VV-M87"/>
             </constraints>
             <size key="customSize" width="134" height="50"/>
             <connections>
@@ -57,7 +55,7 @@
                 <outlet property="haberGorseli" destination="D4o-dE-2eB" id="yBO-MV-3Ch"/>
                 <outlet property="yazarAvatar" destination="HNM-Hs-rrz" id="xHw-SW-tUj"/>
             </connections>
-            <point key="canvasLocation" x="80.5" y="103"/>
+            <point key="canvasLocation" x="80" y="103"/>
         </collectionViewCell>
     </objects>
 </document>
