Söyleyişi Eklendi

--- a/faiktribunu/Segment Tabs/Gundem/GundemCollectionViewCell.xib
+++ b/faiktribunu/Segment Tabs/Gundem/GundemCollectionViewCell.xib
@@ -21,7 +21,7 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NxC-1b-jNf">
                         <rect key="frame" x="0.0" y="0.0" width="275" height="130"/>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQB-EB-dVb">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQB-EB-dVb">
                         <rect key="frame" x="12" y="140" width="48" height="48"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="48" id="cw5-qQ-NkP"/>
