--- a/faiktribunu/Segment Tabs/Yazilar/YazilarCollectionViewCell.xib
+++ b/faiktribunu/Segment Tabs/Yazilar/YazilarCollectionViewCell.xib
@@ -21,7 +21,7 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4o-dE-2eB">
                         <rect key="frame" x="0.0" y="0.0" width="275" height="130"/>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNM-Hs-rrz">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNM-Hs-rrz">
                         <rect key="frame" x="12" y="140" width="48" height="48"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="48" id="28l-DQ-2TY"/>
